[tool.poetry]
name = "production-planning"
version = "0.1.0"
description = "Production Planning Optimization Project"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = ">=3.11"
pandas = "^2.2.3"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
gurobipy = "^11.0.3"
pyomo = "^6.8.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
